# cooperative_drones

./: README.md
ros_workspace/src/peon_movil_description/: CMakeLists.txt  package.xml
ros_workspace/src/peon_movil_description/scripts/: export_stl.py  gen_urdf.py  inventory.csv  ptz_inspect.py
trunks/: readme.txt
trunks/src/autonomous_generic_drone/src/Unidad de Supervision y Control interno/: CMakeLists.txt  uc_definiciones.h
trunks/src/autonomous_generic_drone/src/Unidad de Supervision y Control interno/cmd_processor/: CMakeLists.txt  cmd_processor.h  main.cpp
trunks/src/autonomous_generic_drone/src/Unidad de Supervision y Control interno/kernel/: CMakeLists.txt  kernel.h  main.cpp
trunks/src/autonomous_generic_drone/src/Unidad de Supervision y Control interno/proxy/: CMakeLists.txt  main.cpp  proxy.h
trunks/src/autonomous_generic_drone/src/Unidad de Supervision y Control interno/proxy_manager/: CMakeLists.txt  main.cpp  proxy_manager.h
trunks/src/autonomous_generic_drone/src/Unidad de Supervision y Control interno/servers_service/: CMakeLists.txt  main.cpp  servers_manager.h
trunks/src/autonomous_generic_drone/src/Unidad de Supervision y Control interno/state_machine/: CMakeLists.txt  create_kernel_components.h  main.cpp  state_configurate_component.h  state_create_builder.h  state_shutdown.h
trunks/src/autonomous_generic_drone/src/Unidad de Supervision y Control interno/unidad_supervision/: CMakeLists.txt  main.cpp  resultado_cpp_check.txt
trunks/src/autonomous_generic_drone/src/Unidad_Sensores/: CMakeLists.txt  definiciones_sensores.h
trunks/src/autonomous_generic_drone/src/Unidad_Sensores/builders/: CMakeLists.txt
trunks/src/autonomous_generic_drone/src/Unidad_Sensores/cmake/: unidad_sensores.cmake
trunks/src/autonomous_generic_drone/src/Unidad_Sensores/cmd_executor/: CMakeLists.txt
trunks/src/autonomous_generic_drone/src/Unidad_Sensores/cmd_processor/: CMakeLists.txt
trunks/src/autonomous_generic_drone/src/Unidad_Sensores/data_fusion/: CMakeLists.txt
trunks/src/autonomous_generic_drone/src/Unidad_Sensores/event_processor/: CMakeLists.txt
trunks/src/autonomous_generic_drone/src/Unidad_Sensores/event_reporter/: CMakeLists.txt
trunks/src/autonomous_generic_drone/src/Unidad_Sensores/kernel/: CMakeLists.txt
trunks/src/autonomous_generic_drone/src/Unidad_Sensores/proxy/: CMakeLists.txt
trunks/src/autonomous_generic_drone/src/Unidad_Sensores/proxy_manager/: CMakeLists.txt
trunks/src/autonomous_generic_drone/src/Unidad_Sensores/server_manager/: CMakeLists.txt  main.cpp  server_manager.h
trunks/src/autonomous_generic_drone/src/Unidad_Sensores/state_machine/: CMakeLists.txt
trunks/src/autonomous_generic_drone/src/Unidad_Sensores/unidad_sensores/: CMakeLists.txt
trunks/src/autonomous_generic_drone/src/commonLibs/: CMakeLists.txt  definitions.h
trunks/src/autonomous_generic_drone/src/commonLibs/Reactor/: CMakeLists.txt  CMakeLists.txt~  main.cpp  reactor.h
trunks/src/autonomous_generic_drone/src/commonLibs/builders/: CMakeLists.txt  builder_options.h  builder_proxy_info.h  builders_proxy.h  builders_streams.h  builders_traits.h  main.cpp  test_builders_proxy.cpp  utils_builder.h
trunks/src/autonomous_generic_drone/src/commonLibs/cmake/: FindGMock.cmake  findGlog.cmake
trunks/src/autonomous_generic_drone/src/commonLibs/cmd_protocol/: CMakeLists.txt  cmd_state_traits.h  cmd_state_unit.h  events_state_traits.h  main.cpp  state_transition_unit.h
trunks/src/autonomous_generic_drone/src/commonLibs/comunicacion/: CMakeLists.txt  UDPComm.h  framercomunicacion.h  icomm.h  interfaceframer.h  main.cpp  tcpcommunication.h
trunks/src/autonomous_generic_drone/src/commonLibs/estimadores/: CMakeLists.txt  CMakelists.txt  main.cpp
trunks/src/autonomous_generic_drone/src/commonLibs/factory/: CMakeLists.txt  base_class.h  factory_register.h  generic_factory.cpp  generic_factory.h  main.cpp
trunks/src/autonomous_generic_drone/src/commonLibs/kernel/: CMakeLists.txt  i_kernel_interface.h  kernel.h  main.cpp
trunks/src/autonomous_generic_drone/src/commonLibs/mensajes/cpp/: definicion_mensajeria.pb.cc  definicion_mensajeria.pb.h
trunks/src/autonomous_generic_drone/src/commonLibs/mensajes/interface/: serializer_interface.h
trunks/src/autonomous_generic_drone/src/commonLibs/mensajes/proto/: definicion_mensajeria.proto
trunks/src/autonomous_generic_drone/src/commonLibs/model_manager/: CMakeLists.txt  imodel_properties.h  model_property_unit.h  modelmanager.h
trunks/src/autonomous_generic_drone/src/commonLibs/netlink/: CMakeLists.txt  core.h  prueba.pb.cc  prueba.pb.h  socket.cc
trunks/src/autonomous_generic_drone/src/commonLibs/observer/: CMakeLists.txt  main.cpp  observer.h  sujeto.h
trunks/src/autonomous_generic_drone/src/commonLibs/proxy_base/: CMakeLists.txt  i_proxy_proccess.h  main.cpp  proxy_base.h
trunks/src/autonomous_generic_drone/src/commonLibs/proxy_manager/: CMakeLists.txt  main.cpp  proxy_manager.h
trunks/src/autonomous_generic_drone/src/commonLibs/state_machine/: CMakeLists.txt  generic_state_machine.h  main.cpp  state_create_builder.h
trunks/src/autonomous_generic_drone/src/commonLibs/sub_cmds/: CMakeLists.txt  sub_cmds.h  sub_command_interface.h
trunks/src/autonomous_generic_drone/src/commonLibs/utils_generics/: CMakeLists.txt  CMakeLists.txt.user.917543f.2.7pre1  CMakeLists.txt~  generics_multi_maps.h  generis_strutures.h  gpio_utils.h  linux_uitls.h  main.cpp  utils_transform_data.h  xml_reader.h
trunks/src/autonomous_generic_drone/src/control/: CMakeLists.txt  control_definitions.h
trunks/src/autonomous_generic_drone/src/control/pid/: control_pid.h
trunks/src/autonomous_generic_drone/tests/: CMakeLists.txt
trunks/src/autonomous_generic_drone/tests/commonslibs/: CMakeLists.txt
trunks/src/autonomous_generic_drone/tests/commonslibs/builders/: CMakeLists.txt  builder_aux.h  main.cpp  test_transform_structure.cpp
trunks/src/autonomous_generic_drone/tests/commonslibs/cmd_protocol/: CMakeLists.txt  cmd_state_aux.h  cmd_state_test.h  main.cpp
(+19 files in other folders)
