project (unidad_supervision_control_interno)
cmake_minimum_required(VERSION 2.8)
set(CMAKE_BUILD_TYPE Debug)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 ")
add_subdirectory( kernel )
add_subdirectory(  state_machine )
add_subdirectory( servers_service )
add_subdirectory(  unidad_supervision )
add_subdirectory(  cmd_processor )
