project(unidad_sensores)
cmake_minimum_required( VERSION 2.8 )
set( CMAKE_BUILD_TYPE Debug )
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}  -std=c++11")
add_subdirectory ( kernel )
add_subdirectory ( builders )
add_subdirectory ( cmd_processor )
add_subdirectory ( cmd_executor )
add_subdirectory ( event_processor )
add_subdirectory ( event_reporter )
add_subdirectory ( proxy )
add_subdirectory ( proxy_manager )

add_subdirectory ( state_machine )
add_subdirectory ( data_fusion )
add_subdirectory ( unidad_sensores )
add_subdirectory ( server_manager )
