project (commonsLibs)
cmake_minimum_required(VERSION 2.8)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 ")
add_subdirectory(Reactor)
add_subdirectory(utils_generics)
add_subdirectory(comunicacion)
add_subdirectory( builders)
add_subdirectory( proxy_base )
add_subdirectory( kernel )
add_subdirectory( state_machine )
add_subdirectory( factory )
add_subdirectory ( proxy_manager )
